# rust-image-generator

./: Cargo.toml  README.md
sample/: assets.css  fonts.css  index.html
src/: main.rs
