[package]
name = "rust-image"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.19"
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs", "macros"], optional = true }
